[package]
name = "ultimoradie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot =  { git = "https://github.com/ayrat555/telegram-bot", branch = "ayrat555/api-fixes-10" }
futures = "0.3"
tokio = { version = "0.2.25", features = ["full"]}
